--- a/style.css
+++ b/style.css
@@ -13,19 +13,21 @@
 }
 
 body {
-    max-width: 100vw;
-    height: 100vh;
     text-align: center;
     color: white;
-
+    min-height: 100vh;
+    min-width: 100vw;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
+
 
 iframe {
     border: none;
 }
 
-.load-container,
-.page-container {
+.load-container {
     height: 100%;
     width: 100%;
     display: flex;
@@ -48,6 +50,11 @@ iframe {
 
 .page-container {
     position: relative;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 input {
@@ -170,8 +177,8 @@ form {
     top: 0;
     right: 0;
     /* z-index: 50; */
-    min-height:100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -254,14 +261,21 @@ form {
 
 
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 400px) {
     #msg h2 {
         font-size: 50px;
     }
-    
+
     .main-container h1,
     .main-container span {
         font-size: 40px;
     }
 }
 
+@media (max-width: 600px) {
+    .page-container {
+        width: 100vw;
+        min-width: 100vw;
+        border-radius: 0;
+    }
+}
