--- a/style.css
+++ b/style.css
@@ -49,12 +49,13 @@ iframe {
 }
 
 .page-container {
-    position: relative;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #232323;
+    position: relative;
 }
 
 input {
