--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ form {
 
 
 
-@media screen and (min-width: 400px) {
+@media screen and (max-width: 600px) {
     #msg h2 {
         font-size: 50px;
     }
