--- a/style.css
+++ b/style.css
@@ -142,9 +142,6 @@ form {
     font-size: small;
 }
 
-.hidden {
-    display: none;
-}
 
 .main-container h1 {
     font-family: "Satisfy", cursive;
@@ -185,6 +182,7 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .main-container #crackers {
@@ -304,4 +302,7 @@ form {
         min-width: 100vw;
         border-radius: 0;
     }
+}
+.hidden {
+    display: none;
 }
