--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     min-width: 100vw;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 
@@ -182,7 +182,7 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .main-container #crackers {
